--- a/index.html
+++ b/index.html
@@ -1,84 +1,80 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Plataforma de Mobilidade Sustentável</title>
-  <link
-    rel="stylesheet"
-    href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
-  />
-  <link rel="stylesheet" href="assets/styles/style.css" />
-  <script src="https://cdn.tailwindcss.com"></script>
-</head>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Plataforma de Mobilidade Sustentável</title>
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+    />
+    <link rel="stylesheet" href="assets/styles/style.css" />
+  </head>
 
-<div id="overlay"></div>
+  <div id="overlay"></div>
 
-<body class="bg-gray-50 font-sans">
-  <header class="absolute top-0 left-0 w-full z-50 bg-white shadow-md py-">
-    <h3 class="bg-white/80 backdrop-blur-md px-4 py-2 rounded-full shadow-md text-sky-700 font-semibold text-sm md:text-base">
-      Plataforma de Mobilidade Sustentável
-    </h3>
-  </header>
+  <body>
+    <header id="title">
+      <h3>Plataforma de Mobilidade Sustentável</h3>
+    </header>
 
-  <!-- Controles -->
-  <div id="controles" class="absolute top-20 left-4 bg-white/95 backdrop-blur-md shadow-lg rounded-xl p-4 w-64 space-y-3 z-50">
-    <p class="font-semibold text-sky-700 text-sm">Filtros de Camadas</p>
-    <div class="space-y-1">
-      <label class="flex items-center gap-2 text-sm">
-        <input type="checkbox" id="filtroBicicletas" checked class="accent-sky-600" />
-        Estações de Bicicleta
-      </label>
-      <label class="flex items-center gap-2 text-sm">
-        <input type="checkbox" id="filtroCiclovias" checked class="accent-green-600" />
-        Ciclovias
-      </label>
+    <div id="controles">
+      <div class="control-section">
+        <p class="section-title">Filtros de Camadas</p>
+        <div class="checkbox-group">
+          <label>
+            <input type="checkbox" id="filtroBicicletas" checked />
+            Estações de Bicicleta
+          </label>
+          <label>
+            <input type="checkbox" id="filtroCiclovias" checked />
+            Ciclovias
+          </label>
+        </div>
+      </div>
+      <hr />
+
+      <div class="control-section">
+        <p class="section-title">Visualizar Linhas de Ônibus</p>
+        <p class="section-subtitle">Selecione para ver no mapa:</p>
+        <select id="selectLinhas" multiple size="5">
+          <option value="5106">5106 - Centro → Savassi</option>
+          <option value="4103">4103 - Centro → Pampulha</option>
+          <option value="9202">9202 - Barreiro → Centro</option>
+          <option value="SC01">SC01 - Contorno (Circular)</option>
+          <option value="2104">2104 - Nova Gameleira</option>
+          <option value="8001">8001 - Santa Inês</option>
+        </select>
+      </div>
+
+      <div class="control-section">
+        <button id="btnComparar">Comparar Rotas</button>
+      </div>
+      <hr />
+      <div class="control-section">
+        <button id="btnLocalizacao">Onde estou?</button>
+      </div>
+    </div>
+    <div id="comparador"></div>
+
+    <div id="legenda">
+      <h4>Legenda</h4>
+      <hr>
+      <ul>
+        <li>
+          <span class="legenda-cor-bicicleta"></span> Estação de Bicicleta
+        </li>
+        <li><span class="legenda-cor-ciclovia"></span> Ciclovia</li>
+        <li><span class="legenda-cor-onibus"></span> Rota de Ônibus</li>
+      </ul>
     </div>
 
-    <hr class="border-gray-300" />
+    <div id="map"></div>
 
-    <p class="font-semibold text-sky-700 text-sm">Visualizar Linhas de Ônibus (Mockup)</p>
-    <select id="selectLinhas" multiple size="4" class="w-full p-2 border border-gray-300 rounded-md text-sm focus:outline-sky-600">
-      <option value="5106">5106 - Centro → Savassi</option>
-      <option value="4103">4103 - Centro → Pampulha</option>
-      <option value="9202">9202 - Barreiro → Centro</option>
-    </select>
+    <button id="btnMobileToggle" title="Abrir filtros">☰</button>
 
-    <div class="flex flex-col gap-2 mt-3">
-      <button id="btnMostrarLinhas" class="bg-sky-700 hover:bg-sky-800 text-white py-2 rounded-md text-sm font-medium transition">
-        Exibir Rotas
-      </button>
-      <button id="btnComparar" class="bg-emerald-600 hover:bg-emerald-700 text-white py-2 rounded-md text-sm font-medium transition">
-        Comparar Rotas
-      </button>
-    </div>
-  </div>
-
-  <!-- Comparador -->
-  <div id="comparador" class="hidden absolute top-24 right-4 bg-white/95 backdrop-blur-md shadow-lg rounded-xl p-4 w-80 z-50 border-l-4 border-sky-600"></div>
-
-  <!-- Legenda -->
-  <div id="legenda" class="absolute bottom-4 right-4 bg-white/95 backdrop-blur-md shadow-md rounded-xl p-3 w-56 text-sm z-40">
-    <h4 class="font-semibold text-sky-700 mb-2">Legenda</h4>
-    <div class="flex items-center gap-2 mb-1"><span class="w-4 h-2 rounded bg-sky-600"></span> Estação de Bicicleta</div>
-    <div class="flex items-center gap-2 mb-1"><span class="w-4 h-2 rounded bg-green-600"></span> Ciclovia</div>
-    <div class="flex items-center gap-2"><span class="w-4 border-b-2 border-dashed border-red-500"></span> Rota de Ônibus</div>
-  </div>
-
-  <!-- Mapa -->
-  <div id="map" class="h-screen w-full"></div>
-
-  <!-- Botão flutuante no mobile -->
-<button id="btnMobileToggle" title="Abrir filtros"
-  class="fixed bottom-20 right-4 z-[1500] bg-sky-700 hover:bg-sky-800 text-white 
-  w-12 h-12 rounded-full shadow-lg flex items-center justify-center text-2xl transition">
-  ☰
-</button>
-
-
-  <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
-  <script src="assets/scripts/dados.js"></script>
-  <script src="assets/scripts/script.js"></script>
-</body>
-
+    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+    <script src="assets/scripts/dados.js"></script>
+    <script src="assets/scripts/script.js"></script>
+  </body>
 </html>
