--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
           <option value="SC01">SC01 - Contorno (Circular)</option>
           <option value="2104">2104 - Nova Gameleira</option>
           <option value="8001">8001 - Santa Inês</option>
+          <option value="S54">S54 - Castelo / Ouro Preto</option>
         </select>
       </div>
 
@@ -59,7 +60,7 @@
 
     <div id="legenda">
       <h4>Legenda</h4>
-      <hr>
+      <hr />
       <ul>
         <li>
           <span class="legenda-cor-bicicleta"></span> Estação de Bicicleta
